--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,7 +9,7 @@ ja:
         password: パスワード
         password_confirmation: 確認用パスワード
         password_current: 現在のパスワード
-        icon: アイコン
         introduction: 自己紹介
         created_at: 作成日
         updated_at: 更新日
+        avatar: アイコン
