--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,7 +1,7 @@
 ja:
   activerecord:
     models:
-      user: ユーザー
+      user: ユーザ
     attributes:
       user:
         name: ユーザ名
@@ -13,3 +13,15 @@ ja:
         created_at: 作成日
         updated_at: 更新日
         avatar: アイコン
+
+    models:
+      room: 施設
+    attributes:
+      room:
+        name: 施設名
+        address: 住所
+        price: 料金
+        introduction: 施設詳細
+        created_at: 作成日
+        updated_at: 更新日
+        image: 施設画像
